Multiple-Schedulers-DaemonSet.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  -  image: nginx
     name: nginxmaster
  schedulerName: my-schedular
